{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 254,
  "lineage": "291f74b0-4dbb-8370-3cc1-095f528cc4b6",
  "resources": [
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_controlplane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d1ddd83282187d18",
            "arn": "arn:aws:ec2:eu-central-1:350270704107:instance/i-055aae94b18ce803e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "K8sInstanceProfile",
            "id": "i-055aae94b18ce803e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d9e8fced3a13833d",
            "private_dns": "ip-172-51-1-252.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.51.1.252",
            "public_ip": "18.192.116.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-077094658d0333e47",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-032c439db2f691393",
            "tags": {
              "Managed": "IAC",
              "Name": "k8s-controlplane"
            },
            "tags_all": {
              "Managed": "IAC",
              "Name": "k8s-controlplane"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0873415db505f85eb"
            ]
          },
          "dependencies": [
            "module.resources.aws_iam_instance_profile.k8s_instance_profile",
            "module.resources.aws_iam_role.k8s_iam_role",
            "module.resources.aws_key_pair.terraform-demo",
            "module.resources.aws_security_group.k8s-controlplane",
            "module.resources.aws_subnet.k8s_subnet",
            "module.resources.aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d1ddd83282187d18",
            "arn": "arn:aws:ec2:eu-central-1:350270704107:instance/i-0a8bc385df326d19e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "K8sInstanceProfile",
            "id": "i-0a8bc385df326d19e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07a14597626c659c9",
            "private_dns": "ip-172-51-1-157.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.51.1.157",
            "public_ip": "18.156.162.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cf43a676ff7c1eb5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-032c439db2f691393",
            "tags": {
              "Managed": "IAC",
              "Name": "k8s-worker"
            },
            "tags_all": {
              "Managed": "IAC",
              "Name": "k8s-worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0449f853e5c08391e"
            ]
          },
          "dependencies": [
            "module.resources.aws_iam_instance_profile.k8s_instance_profile",
            "module.resources.aws_iam_role.k8s_iam_role",
            "module.resources.aws_key_pair.terraform-demo",
            "module.resources.aws_security_group.k8s-worker",
            "module.resources.aws_subnet.k8s_subnet",
            "module.resources.aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k8s_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:350270704107:internet-gateway/igw-05501442c90ba4da3",
            "id": "igw-05501442c90ba4da3",
            "owner_id": "350270704107",
            "tags": {
              "Name": "k8s-gw"
            },
            "tags_all": {
              "Name": "k8s-gw"
            },
            "vpc_id": "vpc-0d48c1fd4a1f6e666"
          },
          "dependencies": [
            "module.resources.aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "k8s_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:350270704107:route-table/rtb-0d7b6f3340b5db9c2",
            "id": "rtb-0d7b6f3340b5db9c2",
            "owner_id": "350270704107",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05501442c90ba4da3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-rt"
            },
            "tags_all": {
              "Name": "k8s-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d48c1fd4a1f6e666"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_internet_gateway.k8s_gw",
            "module.resources.aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k8s_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ce5af2883bd1748",
            "route_table_id": "rtb-0d7b6f3340b5db9c2",
            "subnet_id": "subnet-032c439db2f691393"
          },
          "dependencies": [
            "module.resources.aws_internet_gateway.k8s_gw",
            "module.resources.aws_route_table.k8s_rt",
            "module.resources.aws_subnet.k8s_subnet",
            "module.resources.aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s-controlplane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:350270704107:security-group/sg-0873415db505f85eb",
            "description": "allow connection for k8s-controlplane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0873415db505f85eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10257
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10259
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8472
              }
            ],
            "name": "k8s-controlplane",
            "name_prefix": "",
            "owner_id": "350270704107",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed": "IAC",
              "Name": "k8s-controlplane-TEST"
            },
            "tags_all": {
              "Managed": "IAC",
              "Name": "k8s-controlplane-TEST"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d48c1fd4a1f6e666"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_vpc.kubernetes"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:350270704107:security-group/sg-0449f853e5c08391e",
            "description": "allow connection for k8s-worker",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0449f853e5c08391e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8472
              }
            ],
            "name": "k8s-worker",
            "name_prefix": "",
            "owner_id": "350270704107",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed": "IAC",
              "Name": "k8s-worker-TEST"
            },
            "tags_all": {
              "Managed": "IAC",
              "Name": "k8s-worker-TEST"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d48c1fd4a1f6e666"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_vpc.kubernetes"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:350270704107:subnet/subnet-032c439db2f691393",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "172.51.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032c439db2f691393",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "350270704107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s_subnet"
            },
            "tags_all": {
              "Name": "k8s_subnet"
            },
            "vpc_id": "vpc-0d48c1fd4a1f6e666"
          },
          "dependencies": [
            "module.resources.aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:350270704107:vpc/vpc-0d48c1fd4a1f6e666",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.51.0.0/16",
            "default_network_acl_id": "acl-0c7c78a95949cfc85",
            "default_route_table_id": "rtb-0951a0974e441eb46",
            "default_security_group_id": "sg-00b05f58124c8c7f2",
            "dhcp_options_id": "dopt-0c28a2e27ff0e30bc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d48c1fd4a1f6e666",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0951a0974e441eb46",
            "owner_id": "350270704107",
            "tags": {
              "Name": "kubernetes"
            },
            "tags_all": {
              "Name": "kubernetes"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}